curabox/force-app/main/default/objects/Account/fields/Abena_Sammellieferung__c.field-meta.xml
<CustomField>
    <fullName>Abena_Sammellieferung__c</fullName>
    <inlineHelpText>Bei Wunsch einer Sammellieferung an den Pflegedienst muss von Abena eine Nummer für diesen Pflegedienst abgefragt und eingetragen werden.</inlineHelpText>
    <label>Abena Sammellieferung</label>
    <length>15</length>
    <type>Text</type>
</CustomField>