curabox/force-app/main/default/objects/Account/fields/Abrechnung_gen_daten_54__c.field-meta.xml
<CustomField>
    <fullName>Abrechnung_gen_daten_54__c</fullName>
    <label>PG54. Felder NICHT in Abrechnung</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genehmigt ab</fullName>
            </value>
            <value>
                <fullName>Genemigungsnummer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>