curabox/force-app/main/default/objects/Account/fields/Abrechnung_HM_Positionsnummer__c.field-meta.xml
<CustomField>
    <fullName>Abrechnung_HM_Positionsnummer__c</fullName>
    <label>Abrechnung HM Positionsnummer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>