curabox/force-app/main/default/objects/Account/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <label>AC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>