curabox/force-app/main/default/objects/Account/fields/Adresszusatz_1__c.field-meta.xml
<CustomField>
    <fullName>Adresszusatz_1__c</fullName>
    <label>Adresszusatz</label>
    <length>50</length>
    <type>Text</type>
</CustomField>