curabox/force-app/main/default/objects/Account/fields/Akquiriert_worden_durch__c.field-meta.xml
<CustomField>
    <fullName>Akquiriert_worden_durch__c</fullName>
    <inlineHelpText>Hier bitte eintragen welcher Vertriebsmitarbeiter diesen Partner akquiriert hat</inlineHelpText>
    <label>Akquiriert worden durch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aletta Bautista</fullName>
            </value>
            <value>
                <fullName>Benedikt Zacher</fullName>
            </value>
            <value>
                <fullName>Caroline Stahl</fullName>
            </value>
            <value>
                <fullName>Chris Ruprecht</fullName>
            </value>
            <value>
                <fullName>Christian Schmidt</fullName>
            </value>
            <value>
                <fullName>Florian Medag</fullName>
            </value>
            <value>
                <fullName>Florian Mohr</fullName>
            </value>
            <value>
                <fullName>Harry Hehlke</fullName>
            </value>
            <value>
                <fullName>Hein-Hinnerk Hübers</fullName>
            </value>
            <value>
                <fullName>Henning Pramschiefer</fullName>
            </value>
            <value>
                <fullName>Johannes Peter</fullName>
            </value>
            <value>
                <fullName>Jörg Nierenz</fullName>
            </value>
            <value>
                <fullName>Julia Heinen</fullName>
            </value>
            <value>
                <fullName>Justyna Tretowski</fullName>
            </value>
            <value>
                <fullName>Karina Redzinski</fullName>
            </value>
            <value>
                <fullName>Katharina Bach</fullName>
            </value>
            <value>
                <fullName>Katharina Claes</fullName>
            </value>
            <value>
                <fullName>Kerem Köksal</fullName>
            </value>
            <value>
                <fullName>Kristof Wehrhahn</fullName>
            </value>
            <value>
                <fullName>Lars Kilchert</fullName>
            </value>
            <value>
                <fullName>Lisa Aalberts</fullName>
            </value>
            <value>
                <fullName>Marita Harms</fullName>
            </value>
            <value>
                <fullName>Michael Büning</fullName>
            </value>
            <value>
                <fullName>Nicole Weingarten</fullName>
            </value>
            <value>
                <fullName>Nico Schlüter</fullName>
            </value>
            <value>
                <fullName>Nils Lange</fullName>
            </value>
            <value>
                <fullName>Oliver Peikert</fullName>
            </value>
            <value>
                <fullName>Raschid Laamouri</fullName>
            </value>
            <value>
                <fullName>Ricarda Strelau</fullName>
            </value>
            <value>
                <fullName>Robert Feist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>