curabox/force-app/main/default/objects/Account/fields/Aktivierung_am__c.field-meta.xml
<CustomField>
    <fullName>Aktivierung_am__c</fullName>
    <inlineHelpText>Datumsfeld für den Vertrieb. Gibt an, wann eine Aktivierung des Partners stattgefunden hat.</inlineHelpText>
    <label>Aktivierung am</label>
    <type>Date</type>
</CustomField>