curabox/force-app/main/default/objects/Account/fields/Anzahl_der_Kunden__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Kunden__c</fullName>
    <inlineHelpText>Anzahl der Kunden eines Pflegedienstes. Die Anzahl der Kunden wird automatisch vom System gezählt.</inlineHelpText>
    <label>Anzahl der Kunden (PD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>