curabox/force-app/main/default/objects/Account/fields/Anzahl_der_Patienten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Patienten__c</fullName>
    <label>monatl. Anforderungen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>monatliche Anforderungsliste</fullName>
            </value>
            <value>
                <fullName>individuelle Regelung</fullName>
            </value>
            <value>
                <fullName>ausschließlich Direktkunden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>