curabox/force-app/main/default/objects/Account/fields/Anzahl_Patienten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Patienten__c</fullName>
    <label>Anzahl Patienten</label>
    <type>TextArea</type>
</CustomField>