curabox/force-app/main/default/objects/Account/fields/AoA__c.field-meta.xml
<CustomField>
    <fullName>AoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AoA</label>
    <type>Checkbox</type>
</CustomField>