curabox/force-app/main/default/objects/Account/fields/Bedarfsmeldung__c.field-meta.xml
<CustomField>
    <fullName>Bedarfsmeldung__c</fullName>
    <formula>ISPICKVAL(Kategorie__c, &quot;01 Ambulante Pflegedienste&quot;) &amp;&amp; ISPICKVAL(Anzahl_der_Patienten__c, &quot;monatliche Anforderungsliste&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedarfsmeldung</label>
    <type>Checkbox</type>
</CustomField>