curabox/force-app/main/default/objects/Account/fields/Beratung_vor_Ort_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Beratung_vor_Ort_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beratung vor Ort gewünscht</label>
    <type>Checkbox</type>
</CustomField>