curabox/force-app/main/default/objects/Account/fields/bermittlung__c.field-meta.xml
<CustomField>
    <fullName>bermittlung__c</fullName>
    <description>Dient der Speicherung der Information wie die Abrechnungsdaten an den Abrechner übertragen werden</description>
    <inlineHelpText>Dient der Speicherung der Information wie die Abrechnungsdaten an den Abrechner übertragen werden</inlineHelpText>
    <label>Übermittlung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>per Fax</fullName>
            </value>
            <value>
                <fullName>per Post</fullName>
            </value>
            <value>
                <fullName>per Mail</fullName>
            </value>
            <value>
                <fullName>elektronische Datenübertragung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>