curabox/force-app/main/default/objects/Account/fields/Bezuschussung_durch_die_Kasse_m_glich__c.field-meta.xml
<CustomField>
    <fullName>Bezuschussung_durch_die_Kasse_m_glich__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bezuschussung durch die Kasse möglich</label>
    <type>Checkbox</type>
</CustomField>