curabox/force-app/main/default/objects/Account/fields/businessCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>businessCreatedDate__c</fullName>
    <label>Business CreatedDate</label>
    <type>DateTime</type>
</CustomField>