curabox/force-app/main/default/objects/Account/fields/Care_service_company_type__c.field-meta.xml
<CustomField>
    <fullName>Care_service_company_type__c</fullName>
    <description>Unternehmensform der Ambulanten Dienste</description>
    <inlineHelpText>Unternehmensform der Ambulanten Dienste</inlineHelpText>
    <label>Unternehmensform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privat</fullName>
            </value>
            <value>
                <fullName>Gemeinnützig</fullName>
            </value>
            <value>
                <fullName>Wohlfahrt</fullName>
            </value>
            <value>
                <fullName>Trägerschaft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>