curabox/force-app/main/default/objects/Account/fields/Debitoren_Nummer_SV__c.field-meta.xml
<CustomField>
    <fullName>Debitoren_Nummer_SV__c</fullName>
    <description>Debitoren-Nummer des Partners im pflege.de Scope-Visio System</description>
    <inlineHelpText>Debitoren-Nummer des Partners im pflege.de Scope-Visio System</inlineHelpText>
    <label>Debitoren-Nummer SV</label>
    <length>10</length>
    <type>Text</type>
</CustomField>