curabox/force-app/main/default/objects/Account/fields/Email_Firma__c.field-meta.xml
<CustomField>
    <fullName>Email_Firma__c</fullName>
    <label>Email Firma</label>
    <type>Email</type>
</CustomField>