curabox/force-app/main/default/objects/Account/fields/Empf_nger_Adresse_Rechnungen__c.field-meta.xml
<CustomField>
    <fullName>Empf_nger_Adresse_Rechnungen__c</fullName>
    <description>Empfänger der monatlichen Rechnungen für vermittelte Anfragen. &quot;Untergeordnete Account&quot; funktioniert nur, wenn nur ein Account angehangen ist.</description>
    <inlineHelpText>Empfänger der monatlichen Rechnungen für vermittelte Anfragen. &quot;Untergeordnete Account&quot; funktioniert nur, wenn nur ein Account angehangen ist.</inlineHelpText>
    <label>Empfänger Adresse Rechnungen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
                <default>true</default>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Träger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>