curabox/force-app/main/default/objects/Account/fields/Empf_nger_Erinnerungsmail__c.field-meta.xml
<CustomField>
    <fullName>Empf_nger_Erinnerungsmail__c</fullName>
    <label>Empfänger Erinnerungsmail</label>
    <type>Email</type>
</CustomField>