curabox/force-app/main/default/objects/Account/fields/Familien_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>Familien_CRM_ID__c</fullName>
    <label>Familien_CRM_ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>