curabox/force-app/main/default/objects/Account/fields/Familien_ID__c.field-meta.xml
<CustomField>
    <fullName>Familien_ID__c</fullName>
    <displayFormat>F-{000000}</displayFormat>
    <label>Familien ID</label>
    <type>AutoNumber</type>
</CustomField>