curabox/force-app/main/default/objects/Account/fields/Familien_Name__c.field-meta.xml
<CustomField>
    <fullName>Familien_Name__c</fullName>
    <description>Unter welchem Namen wird die Familie angelegt?</description>
    <inlineHelpText>Unter welchem Namen wird die Familie angelegt?</inlineHelpText>
    <label>Familien Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>