curabox/force-app/main/default/objects/Account/fields/Fax_Badumbau__c.field-meta.xml
<CustomField>
    <fullName>Fax_Badumbau__c</fullName>
    <description>Curabox and Badumbau Krankenkassen have a different fax number. This field is only for the fax number of the Badumbau Kassen.</description>
    <label>Fax Badumbau</label>
    <type>Phone</type>
</CustomField>