curabox/force-app/main/default/objects/Account/fields/Fee_statement__c.field-meta.xml
<CustomField>
    <fullName>Fee_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honorarabrechnung</label>
    <type>Checkbox</type>
</CustomField>