curabox/force-app/main/default/objects/Account/fields/Focus_of_customer_service__c.field-meta.xml
<CustomField>
    <fullName>Focus_of_customer_service__c</fullName>
    <label>Schwerpunkte der Kundenbetreuung</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Palliativ Pflege</fullName>
            </value>
            <value>
                <fullName>MS Pflege</fullName>
            </value>
            <value>
                <fullName>Schlaganfall Pflege</fullName>
            </value>
            <value>
                <fullName>Wundversorgung</fullName>
            </value>
            <value>
                <fullName>Intensivpflege</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>