curabox/force-app/main/default/objects/Account/fields/Franchise_Nummer__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Nummer__c</fullName>
    <description>Interne Partner-Nummer innerhalb der Franchise-Organisation. Wird benötigt für den PLZ-Upload.</description>
    <inlineHelpText>Interne Partner-Nummer innerhalb der Franchise-Organisation. Wird benötigt für den PLZ-Upload.</inlineHelpText>
    <label>Franchise Nummer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>