curabox/force-app/main/default/objects/Account/fields/GPS_Ortung_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>GPS_Ortung_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPS Ortung gewünscht</label>
    <type>Checkbox</type>
</CustomField>