curabox/force-app/main/default/objects/Account/fields/Hilfsmittel_Kennzeichen__c.field-meta.xml
<CustomField>
    <fullName>Hilfsmittel_Kennzeichen__c</fullName>
    <label>Hilfsmittel Kennzeichen</label>
    <length>25</length>
    <type>Text</type>
</CustomField>