curabox/force-app/main/default/objects/Account/fields/Hintergrunddienst_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Hintergrunddienst_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hintergrunddienst gewünscht</label>
    <type>Checkbox</type>
</CustomField>