curabox/force-app/main/default/objects/Account/fields/IK_Kostenvoranschlag__c.field-meta.xml
<CustomField>
    <fullName>IK_Kostenvoranschlag__c</fullName>
    <description>IK Nummer der Krankenkasse für die elektronische Kostenvoranschläge</description>
    <label>IK Kostenvoranschlag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>