curabox/force-app/main/default/objects/Account/fields/IK_Nummer__c.field-meta.xml
<CustomField>
    <fullName>IK_Nummer__c</fullName>
    <label>IK Nummer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>