curabox/force-app/main/default/objects/Account/fields/IK_Verordner__c.field-meta.xml
<CustomField>
    <fullName>IK_Verordner__c</fullName>
    <description>IK Verordner für eKV</description>
    <label>IK Verordner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>