curabox/force-app/main/default/objects/Account/fields/Inbetriebnahmeservice_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Inbetriebnahmeservice_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbetriebnahmeservice gewünscht</label>
    <type>Checkbox</type>
</CustomField>