curabox/force-app/main/default/objects/Account/fields/Infomaterial_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Infomaterial_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infomaterial gewünscht</label>
    <type>Checkbox</type>
</CustomField>