curabox/force-app/main/default/objects/Account/fields/Jahr__c.field-meta.xml
<CustomField>
    <fullName>Jahr__c</fullName>
    <label>Übergabe Leadnummer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>