curabox/force-app/main/default/objects/Account/fields/Kanal_Unterpunkt__c.field-meta.xml
<CustomField>
    <fullName>Kanal_Unterpunkt__c</fullName>
    <label>Kanal Unterpunkt</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Kategorie__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Betreutes Wohnen</fullName>
            </value>
            <value>
                <fullName>gesetzlich</fullName>
            </value>
            <value>
                <fullName>privat</fullName>
            </value>
            <value>
                <fullName>Tagespflege</fullName>
            </value>
            <value>
                <fullName>Physiotherapeuten</fullName>
            </value>
            <value>
                <fullName>Ergotherapeuten</fullName>
            </value>
            <value>
                <fullName>Ernährungsberater</fullName>
            </value>
            <value>
                <fullName>medizinischen Fusspfleger</fullName>
            </value>
            <value>
                <fullName>Pflegemesse</fullName>
            </value>
            <value>
                <fullName>Seniorenmesse</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Sozialamt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>