curabox/force-app/main/default/objects/Account/fields/Kategorie__c.field-meta.xml
<CustomField>
    <fullName>Kategorie__c</fullName>
    <label>Kanal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 Ambulante Pflegedienste</fullName>
            </value>
            <value>
                <fullName>02 Stat. Pflegeeinrichtungen</fullName>
            </value>
            <value>
                <fullName>03 Kostenträger</fullName>
            </value>
            <value>
                <fullName>04 Seniorenbetreuer (B2C)</fullName>
            </value>
            <value>
                <fullName>05 Berater des Pflegehaushalts</fullName>
            </value>
            <value>
                <fullName>06 Dienstleister Pflegehaushalt</fullName>
            </value>
            <value>
                <fullName>07 Praxen (Hausärzte/APIs)</fullName>
            </value>
            <value>
                <fullName>08 Kliniken (Akut/AHB/Reha)</fullName>
            </value>
            <value>
                <fullName>09 Apotheken</fullName>
            </value>
            <value>
                <fullName>10 Sanitätshäuser</fullName>
            </value>
            <value>
                <fullName>11 Gesundheitsberufe</fullName>
            </value>
            <value>
                <fullName>12 Interessengruppen</fullName>
            </value>
            <value>
                <fullName>13 Werbung/PR</fullName>
            </value>
            <value>
                <fullName>14 Direktmarketing</fullName>
            </value>
            <value>
                <fullName>15 Leadmarketing</fullName>
            </value>
            <value>
                <fullName>16 Database Marketing</fullName>
            </value>
            <value>
                <fullName>17 Messen/Veranstaltungen</fullName>
            </value>
            <value>
                <fullName>18 Retail/Point of Sale</fullName>
            </value>
            <value>
                <fullName>Lieferanten</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>