curabox/force-app/main/default/objects/Account/fields/Keine_Partnerschaft__c.field-meta.xml
<CustomField>
    <fullName>Keine_Partnerschaft__c</fullName>
    <label>Keine Partnerschaft</label>
    <type>Date</type>
</CustomField>