curabox/force-app/main/default/objects/Account/fields/Kontingent_Auslastung__c.field-meta.xml
<CustomField>
    <fullName>Kontingent_Auslastung__c</fullName>
    <description>Wieviele Anfragen sind an den Partner diese Woche übermittelt worden.</description>
    <inlineHelpText>Wieviele Anfragen sind an den Partner diese Woche übermittelt worden.</inlineHelpText>
    <label>Kontingent Auslastung</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>