curabox/force-app/main/default/objects/Account/fields/Kontingent_Auslastung_pro_Tag__c.field-meta.xml
<CustomField>
    <fullName>Kontingent_Auslastung_pro_Tag__c</fullName>
    <description>Wieviele Anfragen sind an den Partner Heute übermittelt worden.</description>
    <label>Kontingent Auslastung pro Tag</label>
    <summarizedField>Partner_Produkte__c.Kontingent_Auslastung_pro_Tag__c</summarizedField>
    <summaryForeignKey>Partner_Produkte__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>