curabox/force-app/main/default/objects/Account/fields/Kontingent_offen_Partner__c.field-meta.xml
<CustomField>
    <fullName>Kontingent_offen_Partner__c</fullName>
    <formula>IF(
!ISNULL(Kontingent_pro_Woche__c),
Kontingent_pro_Woche__c -  Kontingent_Auslastung_pro_Woche__c,
NULL
)</formula>
    <label>Offenes Firmen-Kontingent pro Woche</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>