curabox/force-app/main/default/objects/Account/fields/Kontingent_offen_Partner_pro_Tag__c.field-meta.xml
<CustomField>
    <fullName>Kontingent_offen_Partner_pro_Tag__c</fullName>
    <formula>IF(
!ISNULL(Kontingent_pro_Tag__c),
Kontingent_pro_Tag__c - Kontingent_Auslastung_pro_Tag__c,
NULL
)</formula>
    <label>Offenes Firmen-Kontingent pro Tag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>