curabox/force-app/main/default/objects/Account/fields/Kontingent_pro_Woche__c.field-meta.xml
<CustomField>
    <fullName>Kontingent_pro_Woche__c</fullName>
    <description>Anzahl der maximalen Anfrage an diesen Partner, unabhängig von den Produkten</description>
    <inlineHelpText>Anzahl der maximalen Anfrage an diesen Partner, unabhängig von den Produkten</inlineHelpText>
    <label>Kontingent pro Woche</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>