curabox/force-app/main/default/objects/Account/fields/Kooperativ__c.field-meta.xml
<CustomField>
    <fullName>Kooperativ__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if a health insurance company is cooperative.</description>
    <inlineHelpText>Hier auswählen, wenn es sich um eine kooperative Krankenkasse handeln.</inlineHelpText>
    <label>Kooperativ</label>
    <type>Checkbox</type>
</CustomField>