curabox/force-app/main/default/objects/Account/fields/KV_54_Automatically_Approved__c.field-meta.xml
<CustomField>
    <fullName>KV_54_Automatically_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KV 54 Automatically Approved</label>
    <type>Checkbox</type>
</CustomField>