curabox/force-app/main/default/objects/Account/fields/KV_Allways_verordnungsdaten__c.field-meta.xml
<CustomField>
    <fullName>KV_Allways_verordnungsdaten__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Die verordnungsdaten werden immer an die Krankenkasse gesendet. Unabhägig von Anhangsart</description>
    <inlineHelpText>Die verordnungsdaten werden immer an die Krankenkasse gesendet. Unabhägig von Anhangsart</inlineHelpText>
    <label>KV Allways verordnungsdaten</label>
    <type>Checkbox</type>
</CustomField>