curabox/force-app/main/default/objects/Account/fields/KV_Anhangsart__c.field-meta.xml
<CustomField>
    <fullName>KV_Anhangsart__c</fullName>
    <label>KV Anhangsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>Kostenvoranschlag</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Verordnung</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>weitere Anhänge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>