curabox/force-app/main/default/objects/Account/fields/KV_Ansprechpartner_LE__c.field-meta.xml
<CustomField>
    <fullName>KV_Ansprechpartner_LE__c</fullName>
    <description>Ansprechpartner LE für eKV</description>
    <inlineHelpText>Ansprechpartner LE für eKV</inlineHelpText>
    <label>KV Ansprechpartner LE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>