curabox/force-app/main/default/objects/Account/fields/KV_Ansprechpartner_LE_Telefon__c.field-meta.xml
<CustomField>
    <fullName>KV_Ansprechpartner_LE_Telefon__c</fullName>
    <label>KV Ansprechpartner LE Telefon</label>
    <length>128</length>
    <type>Text</type>
</CustomField>