curabox/force-app/main/default/objects/Account/fields/KV_Hilfsmittelkennzeichen__c.field-meta.xml
<CustomField>
    <fullName>KV_Hilfsmittelkennzeichen__c</fullName>
    <label>KV Hilfsmittelkennzeichen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>