curabox/force-app/main/default/objects/Account/fields/KV_LEGS__c.field-meta.xml
<CustomField>
    <fullName>KV_LEGS__c</fullName>
    <label>KV LEGS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>