curabox/force-app/main/default/objects/Account/fields/KV_per_Fax__c.field-meta.xml
<CustomField>
    <fullName>KV_per_Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KV wird per Fax gesendet</description>
    <label>KV per Fax</label>
    <type>Checkbox</type>
</CustomField>