curabox/force-app/main/default/objects/Account/fields/KV_PG51_HIMINR__c.field-meta.xml
<CustomField>
    <fullName>KV_PG51_HIMINR__c</fullName>
    <description>HIMINR KUWV  für eKV</description>
    <label>KV PG51 HIMINR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>