curabox/force-app/main/default/objects/Account/fields/KV_PG54_HIMINR__c.field-meta.xml
<CustomField>
    <fullName>KV_PG54_HIMINR__c</fullName>
    <label>KV PG54 HIMINR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>