curabox/force-app/main/default/objects/Account/fields/KV_PG_Getrennt__c.field-meta.xml
<CustomField>
    <fullName>KV_PG_Getrennt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>eKV für CB und KUWV getrennt senden</description>
    <inlineHelpText>eKV für CB und KUWV getrennt senden</inlineHelpText>
    <label>KV PG Getrennt</label>
    <type>Checkbox</type>
</CustomField>