curabox/force-app/main/default/objects/Account/fields/KV_Verordner__c.field-meta.xml
<CustomField>
    <fullName>KV_Verordner__c</fullName>
    <description>Verordner Betriebsstättennummer/Arztnummer</description>
    <label>KV Verordner</label>
    <length>128</length>
    <type>Text</type>
</CustomField>