curabox/force-app/main/default/objects/Account/fields/KV_Versichertenstatus__c.field-meta.xml
<CustomField>
    <fullName>KV_Versichertenstatus__c</fullName>
    <description>Versichertenstatus (0)</description>
    <inlineHelpText>Versichertenstatus - leer oder &quot;0&quot;</inlineHelpText>
    <label>KV Versichertenstatus</label>
    <length>12</length>
    <type>Text</type>
</CustomField>