curabox/force-app/main/default/objects/Account/fields/Leadnummer__c.field-meta.xml
<CustomField>
    <fullName>Leadnummer__c</fullName>
    <formula>if( Jahr__c =&quot;&quot;,  Nummer_wenn_kLeadnr__c ,Jahr__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kundennummer</label>
    <type>Text</type>
</CustomField>