curabox/force-app/main/default/objects/Account/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <label>Logo-Url</label>
    <type>Url</type>
</CustomField>