curabox/force-app/main/default/objects/Account/fields/Medifox__c.field-meta.xml
<CustomField>
    <fullName>Medifox__c</fullName>
    <inlineHelpText>Dieses Feld ist zu &quot;haken&quot;, wenn  der Pflegedienst Medifox zur Verwaltung nutzt</inlineHelpText>
    <label>Medifox Nutzer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>