curabox/force-app/main/default/objects/Account/fields/Medifox_Ausschluss__c.field-meta.xml
<CustomField>
    <fullName>Medifox_Ausschluss__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn grundsätzlich Medifox ausgeschlossen werden soll, ist dieses Feld zu Haken</inlineHelpText>
    <label>Medifox Ausschluss</label>
    <type>Checkbox</type>
</CustomField>