curabox/force-app/main/default/objects/Account/fields/Mitbewerber__c.field-meta.xml
<CustomField>
    <fullName>Mitbewerber__c</fullName>
    <label>Mitbewerber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Curacare</fullName>
            </value>
            <value>
                <fullName>Sanitätshaus / Apotheke</fullName>
            </value>
            <value>
                <fullName>Sonstige Versanddienstleister</fullName>
            </value>
            <value>
                <fullName>Pflegebox</fullName>
            </value>
            <value>
                <fullName>Kein Partner</fullName>
            </value>
            <value>
                <fullName>Diverse / Verschiedene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>