curabox/force-app/main/default/objects/Account/fields/mobiles_Ger_t_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>mobiles_Ger_t_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mobiles Gerät gewünscht</label>
    <type>Checkbox</type>
</CustomField>