curabox/force-app/main/default/objects/Account/fields/net_value_discount_cancellation__c.field-meta.xml
<CustomField>
    <fullName>net_value_discount_cancellation__c</fullName>
    <label>Vergütungswert Storno (netto)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>