curabox/force-app/main/default/objects/Account/fields/Net_value_of_discount__c.field-meta.xml
<CustomField>
    <fullName>Net_value_of_discount__c</fullName>
    <description>Net value of prompt discount in Euro</description>
    <label>Skontowert (netto)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>